First load result visibility fix

--- a/src/components/Currency/CurrencySlider/CurrencySwiper.scss
+++ b/src/components/Currency/CurrencySlider/CurrencySwiper.scss
@@ -89,6 +89,7 @@
     transition: 0.1s;
     display: flex;
     justify-content: center;
+    opacity: 0;
 
     &--letter {
       display: inline-block;
